// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should render container 1`] = `
<div
  className="ticket-message component isVirtualized"
>
  <div
    className="avatar"
  >
    <Avatar
      email="john.doe@example.com"
      name="John Doe"
      size={36}
      style={Object {}}
      withTooltip={false}
    />
  </div>
  <div
    className="bodyWrapper"
  >
    <Header
      displayMessageStatusIndicator={false}
      hasError={false}
      id="some-header"
      isLastRead={false}
      isMessageDeleted={false}
      isMessageHidden={false}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
      timezone="America/Los_Angeles"
    />
    <Footer
      id="some-header"
      isMessageDeleted={false}
      isMessageHidden={false}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
    />
  </div>
</div>
`;

exports[`Container should render container with an avatar because the hidden message is duplicated 1`] = `
<div
  className="ticket-message component isVirtualized"
>
  <div
    className="avatar"
  >
    <Avatar
      email="john.doe@example.com"
      name="John Doe"
      size={36}
      style={Object {}}
      withTooltip={false}
    />
  </div>
  <div
    className="bodyWrapper"
  >
    <Header
      displayMessageStatusIndicator={false}
      hasError={false}
      id="some-header"
      isLastRead={false}
      isMessageDeleted={false}
      isMessageHidden={true}
      message={
        Object {
          "channel": "facebook",
          "created_datetime": "",
          "from_agent": false,
          "id": 1,
          "isMessage": true,
          "meta": Object {
            "hidden_datetime": "2020-06-18T14:10:14.291746",
            "is_duplicated": true,
            "private_reply": Object {
              "original_ticket_id": 1234,
            },
          },
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "source": Object {
            "from": Object {
              "address": "657788504429455-657788504429455",
              "name": "Page",
            },
            "to": Array [
              Object {
                "address": "657788504429455-4135481299826174",
                "name": "Cust Omer",
              },
            ],
            "type": "facebook-comment",
          },
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "facebook",
        }
      }
      timezone="America/Los_Angeles"
    />
    <Footer
      id="some-header"
      isMessageDeleted={false}
      isMessageHidden={true}
      message={
        Object {
          "channel": "facebook",
          "created_datetime": "",
          "from_agent": false,
          "id": 1,
          "isMessage": true,
          "meta": Object {
            "hidden_datetime": "2020-06-18T14:10:14.291746",
            "is_duplicated": true,
            "private_reply": Object {
              "original_ticket_id": 1234,
            },
          },
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "source": Object {
            "from": Object {
              "address": "657788504429455-657788504429455",
              "name": "Page",
            },
            "to": Array [
              Object {
                "address": "657788504429455-4135481299826174",
                "name": "Cust Omer",
              },
            ],
            "type": "facebook-comment",
          },
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "facebook",
        }
      }
    />
  </div>
</div>
`;

exports[`Container should render container with isBodyHiglighted because it should be highlighted 1`] = `
<div
  className="ticket-message component ticketMessagesHighlighted isVirtualized"
>
  <div
    className="bodyWrapper bodyWrapperForHiddenOrDeletedMessage"
  >
    <Header
      displayMessageStatusIndicator={false}
      hasError={false}
      id="some-header"
      isLastRead={false}
      isMessageDeleted={true}
      isMessageHidden={false}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
      timezone="America/Los_Angeles"
    />
    <Footer
      id="some-header"
      isMessageDeleted={true}
      isMessageHidden={false}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
    />
  </div>
</div>
`;

exports[`Container should render container without an avatar because the message is deleted 1`] = `
<div
  className="ticket-message component isVirtualized"
>
  <div
    className="bodyWrapper bodyWrapperForHiddenOrDeletedMessage"
  >
    <Header
      displayMessageStatusIndicator={false}
      hasError={false}
      id="some-header"
      isLastRead={false}
      isMessageDeleted={true}
      isMessageHidden={false}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
      timezone="America/Los_Angeles"
    />
    <Footer
      id="some-header"
      isMessageDeleted={true}
      isMessageHidden={false}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
    />
  </div>
</div>
`;

exports[`Container should render container without an avatar because the message is hidden 1`] = `
<div
  className="ticket-message component isVirtualized"
>
  <div
    className="bodyWrapper bodyWrapperForHiddenOrDeletedMessage"
  >
    <Header
      displayMessageStatusIndicator={false}
      hasError={false}
      id="some-header"
      isLastRead={false}
      isMessageDeleted={false}
      isMessageHidden={true}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
      timezone="America/Los_Angeles"
    />
    <Footer
      id="some-header"
      isMessageDeleted={false}
      isMessageHidden={true}
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
    />
  </div>
</div>
`;
